crates/jolt_java_fmt/tests/snapshots/corpus__style__imports__case_sensitive_sorting.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import com.Example;
import com.alpha.Alpha;
import com.beta.Beta;

class A {
}

diagnostics:
(none)
