crates/jolt_java_fmt/tests/snapshots/corpus__style__imports__comment_barrier_blank_lines.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import a.Alpha;
// travels with its import
import z.Zed;

// keeps the blank line before it
import b.Beta;

class A {
}

diagnostics:
(none)
