crates/jolt_java_fmt/tests/snapshots/corpus__style__imports__comment_barrier_pinned_anchor.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import z.Zed;
/*hunt*/
import m.Middle;
import a.Alpha;

class C {
}

diagnostics:
(none)
