crates/jolt_java_fmt/tests/snapshots/corpus__style__imports__comment_barrier_removed_separator.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
/*hunt*/
import one.last;

import static java.utils.*;

class C {
}

diagnostics:
(none)
