crates/jolt_java_fmt/tests/snapshots/corpus__style__imports__comment_barrier_removed_separator_static_mid_batch.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import static java.utils.*;
import static something.Different;
/*hunt*/
import static abc.def.Something;
import static abc.def;
import static one.last;

class C {
}

diagnostics:
(none)
