crates/jolt_java_fmt/tests/snapshots/corpus__style__imports__comment_barrier_static_anchor_normal_group.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import abc.def;
import java.utils.*;
import one.last;
import something.Different;

import static abc.def;
import static java.utils.*;
/*hunt*/
import static abc.def.Something;

class C {
}

diagnostics:
(none)
