crates/jolt_java_fmt/tests/snapshots/corpus__style__imports__comment_barrier_static_first.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import a.A;

import static b.B;
import static c.C;
/* comment travels with its import */
import static d.D;

class A {
}

diagnostics:
(none)
