crates/jolt_java_fmt/tests/snapshots/corpus__style__imports__normal_and_static_groups.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import a.Alpha;
import b.Beta;
import module java.base;
import module.foo.Bar;

import static a.Alpha.alpha;
import static z.Zed.z;

class A {
}

diagnostics:
(none)
